# certification-tracker

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  LICENSE  PLANNING.md  README.md  pyproject.toml
app/: config.py  main.py
app/models/: enums.py  schemas.py
app/pages/: 01_dashboard.py  02_data_entry.py  03_catalog_import.py
app/services/: catalog_import_service.py  duckdb_service.py  ingestion_service.py  metrics_service.py  progress_service.py
data/curated/: certification_tracks.csv  learning_paths.csv  module_progress.csv  modules.csv  time_entries.csv  users.csv
data/raw/microsoft_learn/: catalog-page-001-https-learn-microsoft-com-api-catalog-type-learningpaths-product-azure-locale-en.json
scripts/: bootstrap_data.py  import_microsoft_learn.py
tests/: test_bootstrap_data.py  test_catalog_import_service.py  test_config.py  test_duckdb_service.py  test_ingestion_service.py  test_metrics_service.py  test_progress_service.py
tests/fixtures/: sample_catalog_api_response.json  sample_certification_tracks.csv  sample_learning_paths.csv  sample_module_progress.csv  sample_modules.csv  sample_time_entries.csv  sample_users.csv
