[project]
name = "certification-tracker"
version = "0.1.0"
description = "Local dashboard for certification progress tracking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.2",
    "pandas>=2.3.2",
    "plotly>=6.3.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
pretty = true
